<resources>
    <string name="app_name">WellnessWatch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_workout_fragment">Start Workout Fragment</string>
    <string name="history_fragment">History Fragment</string>
    <string name="historicalText">TextView</string>
    <string name="button">Button</string>
    <string name="displayWorkout">Workout Completed</string>
    <string name="recallButton">Exercises</string>
    <string name="allWorkoutsButton">Recall a Workout</string>
    <string name="recallWelcome">Forget to log a workout? Recall it here!</string>
    <string name="recallText">Type workout here</string>
    <string name="recallEnter">Submit</string>
    <string name="workoutListWelcome">See all your logged workouts!</string>
    <string name="fitness_goal">Fitness goal:</string>
    <string name="signUpGoalInstructions">Please select your fitness and wellness goals from the choices below to complete your registration.</string>
    <string name="signUpGoalHeaderText">Almost done!</string>
    <string name="wellness_goal">Wellness goal:</string>
    <string name="signUpButton">Sign Up</string>
    <string name="fitness_goals_dropdown">Fitness Goals Dropdown</string>
    <string name="wellness_goals_dropdown">Wellness Goals Dropdown</string>
    <string name="settingsmenu">Settings</string>
    <string name="aboutusmenu">About Us</string>
    <string name="logoutmenu">Log Out</string>
    <string name="aboutUsParagraph">WellnessWatch is an app created by Joseph Indriolo, Christopher Arditi and Sanaya Deas with the goal of promoting both physical and mental wellness.</string>
    <string name="contactUsParagraph">Feel free to contact us at <a href="WellnessWatch@gmail.com"><b>WellnessWatch@gmail.com</b></a>.</string>
    <string name="instructionsForReporting">If you encounter any bugs or issues, please send a detailed email to <a href="WellnessWatch@gmail.com"><b>wellnesswatch@gmail.com</b></a> featuring a detailed description of the issue you\'ve encountered along with screenshots and videos (if applicable) of the issue described. Thank you for helping us make WellnessWatch a better app!</string>
    <string-array name="fitnessGoals">
        <item>I want to lose weight.</item>
        <item>I want to build muscle.</item>
        <item>I want to get stronger.</item>
        <item>I want to lose weight.</item>
        <item>I want to increase my endurance.</item>
        <item>I want to improve my mobility.</item>
    </string-array>
    <string-array name="wellnessGoals">
        <item>I want to reduce stress.</item>
        <item>I want to reduce anxiety.</item>
        <item>I want to eat healthier.</item>
        <item>I want to get better sleep.</item>
        <item>I want to improve my positivity.</item>
        <item>I want to start meditating.</item>
    </string-array>

</resources>